@@ -100,46 +100,56 @@ fostlib::http::server::request::request(
 }
 
 
+namespace {
+    /*
+        This is really nasty, but we have to do it as Boost.Spirit is not
+        thread safe.
+    */
+    boost::mutex g_parser_mutex;
+}
 void fostlib::http::server::request::operator () (
     std::auto_ptr< boost::asio::ip::tcp::socket > socket
 ) {
     m_cnx.reset( new network_connection(socket) );
     utf8_string first_line;
     (*m_cnx) >> first_line;
-    if ( !boost::spirit::parse(first_line.underlying().c_str(),
-        (
-            +boost::spirit::chset<>( "A-Z" )
-        )[
-            phoenix::var(m_method) =
-                phoenix::construct_< string >( phoenix::arg1, phoenix::arg2 )
-        ]
-        >> boost::spirit::chlit< char >( ' ' )
-        >> (+boost::spirit::chset<>( "_a-zA-Z0-9/.,:()%=-" ))[
-            phoenix::var(m_pathspec) =
-                phoenix::construct_< url::filepath_string >(
-                    phoenix::arg1, phoenix::arg2
-                )
-        ]
-        >> !(
-            boost::spirit::chlit< char >('?')
-            >> (+boost::spirit::chset<>( "&\\/:_@a-zA-Z0-9.,%+*=-" ))[
-                phoenix::var(m_query_string) =
-                    phoenix::construct_< ascii_printable_string >(
+    {
+        boost::mutex::scoped_lock lock(g_parser_mutex);
+        if ( !boost::spirit::parse(first_line.underlying().c_str(),
+            (
+                +boost::spirit::chset<>( "A-Z" )
+            )[
+                phoenix::var(m_method) =
+                    phoenix::construct_< string >( phoenix::arg1, phoenix::arg2 )
+            ]
+            >> boost::spirit::chlit< char >( ' ' )
+            >> (+boost::spirit::chset<>( "_a-zA-Z0-9/.,:()%=-" ))[
+                phoenix::var(m_pathspec) =
+                    phoenix::construct_< url::filepath_string >(
                         phoenix::arg1, phoenix::arg2
                     )
             ]
-        )
-        >> !(
-            boost::spirit::chlit< char >( ' ' )
-            >> (
-                boost::spirit::strlit< nliteral >("HTTP/1.0") |
-                boost::spirit::strlit< nliteral >("HTTP/1.1")
+            >> !(
+                boost::spirit::chlit< char >('?')
+                >> (+boost::spirit::chset<>( "&\\/:_@a-zA-Z0-9.,%+*=-" ))[
+                    phoenix::var(m_query_string) =
+                        phoenix::construct_< ascii_printable_string >(
+                            phoenix::arg1, phoenix::arg2
+                        )
+                ]
             )
-        )
-    ).full )
-        throw exceptions::not_implemented(
-            "Expected a HTTP request", coerce< string >(first_line)
-        );
+            >> !(
+                boost::spirit::chlit< char >( ' ' )
+                >> (
+                    boost::spirit::strlit< nliteral >("HTTP/1.0") |
+                    boost::spirit::strlit< nliteral >("HTTP/1.1")
+                )
+            )
+        ).full )
+            throw exceptions::not_implemented(
+                "Expected a HTTP request", coerce< string >(first_line)
+            );
+    }
 
     mime::mime_headers headers;
     while ( true ) {
